# Challenges

./: test.html
navy/: Dockerfile  manage.py  poc.py
navy/navy/: db.sqlite3  urls.py  wsgi.py
navy/navy/navy/: asgi.py  settings.py
navy/navy/navy_css/: views.py
navy/navy/navy_css/templates/navy_css/: index.html
navy/navy_css/: apps.py  views.py
navy/poc/: poc.py  pyproject.toml  test.html
