[tool.poetry]
name = "poc"
version = "0.1.0"
description = ""
authors = ["Navy <newatian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.3.0"
fonttools = "^4.38.0"
requests = "^2.28.1"
pyngrok = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
